2011-08-02  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline-interpolation.lisp (spline-interpolation): Now allows for
	closing curves.

	* spline.lisp (initialize-instance): Added some better error
	reporting.

2011-08-01  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline-interpolation.lisp (spline-interpolation): Took out a
	constant of proportionality which Farin says to use but makes the
	interpolation not converge.

	* spline.lisp (initialize-instance): Added a centripetal
	parameterisation option to the b-spline initialiser.

	* basis.lisp (ratio-parameterisation): Have abstracted away
	chord-length parameterisation into a general function that can
	take an arbitrary distance metric.
	(centripetal-parameterisation): Have provided a new
	parametrisation method based on the square root of distance
	ratios.

2011-07-30  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline.lisp (initialize-instance): Added chord length
	parameterisation, a non-uniform parameterisation.

	* basis.lisp: Moved the b-spline basis code into basis.lisp from
	utility.lisp.

	* spline-interpolation.lisp (spline-interpolation): Added a method
	that will take a series of points and return a b-spline that
	interpolates all of the points.

	* l-math.asd (:l-math): bumped the version number in preparation
	for a release.

2011-07-29  Rudy Neeser  <rudy.neeser@gmail.com>

	* utility.lisp (b-spline-knots): The knot data structure now
	has a boolean to indicate whether there are multiplicities or not.
	(get-ith-knot): Has an easy speedup for when there are no
	multiplicities.

	* spline.lisp (b-spline): Added a B-SPLINE class, which represents
	non-uniform b-splines, although it has much code to speed up the
	uniform cubic and quadratic cases.

2011-07-05  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline.lisp (cubic-bezier-curve): Renamed BEZIER-CURVE to
	CUBIC-BEZIER-CURVE.
	(bezier-curve): Created a new BEZIER-CURVE class which uses
	bernstein polynomials directly to calculate the curve. It is also